@@ -370,8 +370,12 @@ namespace libtorrent
 
 		int upload_rate_limit() const;
 		int download_rate_limit() const;
+		int local_upload_rate_limit() const;
+		int local_download_rate_limit() const;
 		int max_half_open_connections() const;
 
+		void set_local_upload_rate_limit(int bytes_per_second);
+		void set_local_download_rate_limit(int bytes_per_second);
 		void set_upload_rate_limit(int bytes_per_second);
 		void set_download_rate_limit(int bytes_per_second);
 		void set_max_uploads(int limit);
